--- a/dsc-phase1-project-template.final.ipynb
+++ b/dsc-phase1-project-template.final.ipynb
@@ -1925,7 +1925,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.2 Box office Mojo\n",
+    "## 6.2 Box Office Mojo\n",
     "Data cleaning for df_3 (3387 rows x 5 columns)\n",
     "\n",
     "What to clean:\n",
@@ -6018,7 +6018,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Top profitable genre by ROI"
+    "Top profitable genres by ROI"
    ]
   },
   {
