--- a/Microsoft movies analysis notebook.ipynb
+++ b/Microsoft movies analysis notebook.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "## 1. Overview\n",
     "\n",
-    "This project analyses the movies market using data from IBDM database, Box office Mojo and The Numbers. Descriptive data analysis of title rating and domestic/worldwide gross income showed the most popular and top performing movie genre. This data analysis showed showed profit varies seasonally and budget required to make a movie. Results from this data analyis can guide Microsoft's decision on genre of movies, production budget and release timeline. "
+    "This project analyses the movies market using data from IBDM database, Box office Mojo and The Numbers. Descriptive data analysis of title rating and domestic/worldwide gross showed the most popular and top gross movie genre are Action, Adventure and Sci-Fi with median runtime between 80-100 minutes. This data analysis showed the profit varies seasonally and the most profitable season is Summer. The budget required to make a movie around 30 millions. Results from this data analysis can guide Microsoft's decision on genre of movies, production budget and release timeline. "
    ]
   },
   {
@@ -101,7 +101,7 @@
    "source": [
     "## 2. Business Problem\n",
     "\n",
-    "Microsoft is interested in starting up a movie studio however they lack knowledge about the movie market. They would like to know which movie is doing well to help them decide which movie to create. By finding out which genre has the highest rating and has the most gross income domestically and internationally which give Microsoft insights to decide which genre of film to make, set budget and release date for maximum profit. \n",
+    "Microsoft is interested in starting a new business venture into building a new movies studio however they lack information of film industry and would like to know which kind of movie to make for profitable return and popularity. \n",
     "\n",
     "To successfully set up a new movie studio, we have to consider:\n",
     "- Components of the film such as genre, runtime, casts, crews \n",
